# jobmatch-ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  guia-rabbitize.md  pyproject.toml  render.yaml  requirements.txt  session_backup.md  todo.md  train_pipeline.py
.github/workflows/: ci.yml  deploy.yml
data/models/: classifier.pkl  eval_clf.parquet  eval_reg.parquet  metrics.json  salary_regressor.pkl  sentence_embeddings.npy  tfidf_vectorizer.pkl
data/processed/: skills_map.json
deploy/: Dockerfile.frontend
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
jobmatch-ai-skill/: SKILL.md
jobmatch-ai-skill/references/: pipeline-dados.md  streamlit-ui.md
notebooks/: 01_eda.ipynb  02_pipeline_composicao.ipynb  03_modelo_classificador.ipynb  04_modelo_salario.ipynb
scripts/: build_skills_map.py  reload_eval.py  startup.sh
src/api/: predictor.py  server.py
src/app/: monitor_dashboard.py  streamlit_app.py
src/models/: classifier.py  recommender.py  salary_model.py  vectorizer.py
src/monitoring/: __init__.py  metrics.py
src/pipeline/: compose_datasets.py  (+2 more)
tests/: conftest.py  test_classifier.py  test_compose_datasets.py  test_integration_real_data.py  test_load_data.py  test_monitoring.py  test_pipeline_integration.py  test_predictor.py  test_preprocess.py  test_recommender.py  test_salary_model.py  test_server.py  test_skills_analyzer.py  test_vectorizer.py
(+13 files in other folders)
