[tool.poetry]
name = "jobmatch-ai"
version = "0.3.0"
description = "Sistema de ML para matching inteligente entre currículos e vagas de emprego"
authors = ["Residência Prática TIC 44 - UFC"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scikit-learn = ">=1.4"
numpy = ">=1.26"
pandas = ">=2.2"
scipy = ">=1.12"
joblib = ">=1.3"
nltk = ">=3.8"
kaggle = ">=1.6"
datasets = ">=2.18"
pyarrow = ">=15.0"
rapidfuzz = ">=3.6"
streamlit = ">=1.33"
python-dotenv = ">=1.0"
tqdm = ">=4.66"
fastapi = ">=0.109"
uvicorn = {extras = ["standard"], version = ">=0.27"}
httpx = ">=0.27"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0"
ipykernel = ">=6.0"
notebook = ">=7.0"
pytest = ">=8.0"
pytest-cov = ">=5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = ["slow: tests that are slow"]

[tool.coverage.run]
source = ["src"]
omit = ["src/app/streamlit_app.py"]

[tool.coverage.report]
show_missing = true
fail_under = 55
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
